--- a/public/project/views/generalPages/templates/navbar-component.view.client.html
+++ b/public/project/views/generalPages/templates/navbar-component.view.client.html
@@ -23,7 +23,7 @@
                 </ul>
                 <form>
                     <ul class="nav navbar-nav navbar-right">
-                        <li><label for="Movie">Search Movies:</label>
+                        <li><label for="Movie">Movies:</label>
                             <input name="searchCritera"
                                    checked="checked"
                                    value="movie"
@@ -32,7 +32,7 @@
                                    type="radio"
                                    placeholder="username"
                                    class="radio-inline radios"/></li>
-                        <li><label for="Tag">Search Tags:</label>
+                        <li><label for="Tag">Tags:</label>
                             <input name="searchCritera"
                                    value="tag"
                                    id="Tag"
@@ -40,7 +40,7 @@
                                    type="radio"
                                    placeholder="username"
                                    class="radio-inline radios"/></li>
-                        <li><label for="User">Search Users:</label>
+                        <li><label for="User">Users:</label>
                             <input name="searchCritera"
                                    value="user"
                                    id="User"
