--- a/public/project/views/userPages/templates/account-page.view.client.js.html
+++ b/public/project/views/userPages/templates/account-page.view.client.js.html
@@ -3,7 +3,7 @@
 <div class="main full">
     <div class="left">
         <h1 class="inline">{{model.user.username}}'s Profile</h1>
-        <div class="alert alert-success inline"
+        <div class="alert alert-success noWrapping"
              ng-show="model.updateMessage">
             {{model.updateMessage}}
         </div>
@@ -46,10 +46,17 @@
     </div>
 
     <div class="right">
-        <ul>
-            <li ng-repeat="movie in model.user.favedMovies">
-                <a class="left" ng-click="model.goToMovie(movie)">{{movie.title}}</a>
-                <img src="movie.poster"
+        <h3>Favorited Movies:</h3>
+        <ul class="list-group">
+            <li ng-repeat="movie in model.movies" class="list-group-item">
+                <a ng-click="model.goToMovie(movie)" class="normal">{{movie.title}}</a>
+            </li>
+        </ul>
+
+        <h3>Favorited Tags:</h3>
+        <ul class="list-group">
+            <li ng-repeat="tag in model.tags" class="list-group-item">
+                <a ng-click="model.goToTag(movie)" class="normal">{{tag.name}}</a>
             </li>
         </ul>
     </div>
