--- a/public/project/views/generalPages/templates/search-page.view.client.html
+++ b/public/project/views/generalPages/templates/search-page.view.client.html
@@ -33,8 +33,8 @@
             </thead>
             <tbody>
             <tr ng-repeat="user in model.users">
+                <td><a ng-click="model.goToUser(user)" class="normal">{{user.username}}</a></td>
                 <td><a ng-click="model.goToUser(user)" class="normal">{{user.firstName}}</a></td>
-                <td><a ng-click="model.goToUser(user)" class="normal">{{user.lastName}}</a></td>
                 <td>{{user.email}}</td>
             </tr>
             </tbody>
