--- a/public/project/views/adminPages/templates/adminUser-page.view.client.html
+++ b/public/project/views/adminPages/templates/adminUser-page.view.client.html
@@ -2,7 +2,7 @@
 
 <div class="main full">
     <div class="left">
-        <h1 class="inline">{{model.user.username}}'s Profile</h1>
+        <h1 class="inline">{{model.other.username}}'s Profile</h1>
         <div class="alert alert-success noWrapping"
              ng-show="model.updateMessage">
             {{model.updateMessage}}
@@ -15,34 +15,39 @@
                    id="username"
                    class="form-control"
                    type="text"
-                   ng-model="model.user.username">
+                   ng-model="model.other.username"
+                   readonly="readonly">
             <label for="password">Password</label>
             <input name="Password"
                    id="password"
                    class="form-control"
                    type="password"
-                   ng-model="model.user.password">
+                   ng-model="model.other.password">
             <label for="firstName">First Name</label>
             <input name="First Name"
                    id="firstName"
                    class="form-control"
                    type="text"
-                   ng-model="model.user.firstName">
+                   ng-model="model.other.firstName">
             <label for="lastName">Last Name</label>
             <input name="Last Name"
                    id="lastName"
                    class="form-control"
                    type="text"
-                   ng-model="model.user.lastName">
+                   ng-model="model.other.lastName">
             <label for="email">E-mail</label>
             <input name="E-mail"
                    id="email"
                    class="form-control"
                    type="email"
-                   ng-model="model.user.email">
+                   ng-model="model.other.email">
         </form>
-        <a ng-click="model.updateCurr(model.user)" class="btn btn-block btn-primary">Update Profile</a>
-        <a ng-click="model.deleteCurr(model.user)" class="btn btn-block btn-primary">Delete Profile</a>
+        <a ng-click="model.submit(model.other)"
+                  class="btn btn-block btn-primary general">Submit</a>
+        <a ng-click="model.cancel()"
+           class="btn btn-block btn-primary general">Cancel</a>
+        <a ng-click="model.delete()"
+           class="btn btn-block btn-primary general">Delete</a>
     </div>
 
     <div class="right">
