--- a/public/project/views/adminPages/templates/adminMovie-page.view.client.html
+++ b/public/project/views/adminPages/templates/adminMovie-page.view.client.html
@@ -1,1 +1,35 @@
 <div ng-include="'./views/generalPages/templates/navbar-component.view.client.html'"></div>
+<div class="general main">
+    <div class="left">
+        <form>
+            <label for="title">Title</label>
+            <input name="title"
+                   id="title"
+                   class="form-control"
+                   type="text"
+                   ng-model="model.movie.title">
+            <label for="favs"
+                   class="block">favs</label>
+            <input name="Favs"
+                   id="favs"
+                   class="form-control"
+                   type="number"
+                   ng-model="model.movie.favs">
+        </form>
+        <a ng-click="model.submit(model.movie)"
+           class="btn btn-block btn-primary general">Submit</a>
+        <a ng-click="model.cancel(model.movie)"
+           class="btn btn-block btn-primary general">Cancel</a>
+        <a ng-click="model.delete(model.movie)"
+           class="btn btn-block btn-primary general">Delete</a>
+    </div>
+
+    <div class="right">
+        <h3>Tags:</h3>
+        <ul class="list-group">
+            <li ng-repeat="tag in model.tags" class="list-group-item">
+                <a ng-click="model.goToTag(tag)" class="normal">{{tag.name}}</a>
+            </li>
+        </ul>
+    </div>
+</div>
