--- a/public/project/views/adminPages/templates/adminUser-page.view.client.html
+++ b/public/project/views/adminPages/templates/adminUser-page.view.client.html
@@ -41,6 +41,12 @@
                    class="form-control"
                    type="email"
                    ng-model="model.other.email">
+            <label for="isAdmin">Is Admin?</label>
+            <input name="isAdmin"
+                   id="isAdmin"
+                   class="form-control"
+                   type="checkbox"
+                   ng-model="model.other.isAdmin">
         </form>
         <a ng-click="model.submit(model.other)"
                   class="btn btn-block btn-primary general">Submit</a>
