--- a/public/project/views/moviePages/templates/tag-page.view.client.html
+++ b/public/project/views/moviePages/templates/tag-page.view.client.html
@@ -5,7 +5,7 @@
         <h5>Movies:</h5>
         <a ng-click="model.goToMovie(movie)"
            ng-repeat="movie in model.movies"
-           class="btn btn-block btn-primary general">{{movie.title}}</a>
+           class="btn btn-block btn-primary general hideOverflow">{{movie.title}}</a>
     </div>
 
     <div class="right-wide">
