--- a/public/project/views/moviePages/templates/movie-page.view.client.html
+++ b/public/project/views/moviePages/templates/movie-page.view.client.html
@@ -9,7 +9,7 @@
            class="btn btn-block btn-primary general">{{tag.name}}</a>
     </div>
 
-    <div>
+    <div class="right-wide">
         <h1>{{model.movie.title}}</h1>
         <h3 ng-show="model.movie.tagline">"{{model.movie.tagline}}"</h3>
         <a ng-show="model.user"
